--- a/DevsEvolutionBack/DevsEvolutionBack.csproj
+++ b/DevsEvolutionBack/DevsEvolutionBack.csproj
@@ -27,4 +27,11 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Services\" />
+    <Folder Include="Entities\" />
+  </ItemGroup>
+
 </Project>
