--- a/DevsEvolutionBack/appsettings.json
+++ b/DevsEvolutionBack/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppCon": "Data Source=127.0.0.1:3306;Initial Catalog=devs_universe;User Id=root; password=1234"
+    "AppCon": "Server=127.0.0.1;Port=3306;Database=devs_universe;Uid=root;Pwd=Silno14da?"
   },
   "Logging": {
     "LogLevel": {
