Fix the "users" controller

--- a/DevsEvolutionBack/appsettings.json
+++ b/DevsEvolutionBack/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppCon": "Server=127.0.0.1;Port=3306;Database=devs_universe;Uid=root;Pwd=Silno14da?"
+    "AppCon": "Server=127.0.0.1;Port=3306;Database=devs_universe;Uid=root;Pwd=Seaways_VCity2003"
   },
   "Logging": {
     "LogLevel": {
